Implement partner endpoints
